--- a/index.html
+++ b/index.html
@@ -63,12 +63,19 @@
               <div id="liveAlertPlaceholder"></div>
             </div>
             <div class="row mb-4">
+              <button id="new-game" class="btn btn-primary mb-2">
+                New Game
+              </button>
               <button id="start-timer" class="btn btn-primary">
                 View Question
               </button>
               <button id="next-question-btn" class="btn btn-secondary mt-2">
                Next Question
               </button>
+
+              <button id="pause-question-btn" class="btn btn-secondary mt-2">
+                Pause
+               </button>
             </div>
           </div>
         </div>
@@ -169,47 +176,47 @@
             </div>
 
             <div class="row level">
-              <div class="col">INR 1000</div>
+              <div class="col" id="prize-11">INR 10,000</div>
               <div class="col">11</div>
             </div>
             <div class="row level">
-              <div class="col">INR 1000</div>
+              <div class="col" id="prize-10">INR 3000</div>
               <div class="col">10</div>
             </div>
             <div class="row level">
-              <div class="col">INR 1000</div>
+              <div class="col" id="prize-9">INR 2000</div>
               <div class="col">9</div>
             </div>
             <div class="row level">
-              <div class="col">INR 1000</div>
+              <div class="col" id="prize-8">INR 1000</div>
               <div class="col">8</div>
             </div>
             <div class="row level">
-              <div class="col">INR 1000</div>
+              <div class="col" id="prize-7">INR 500</div>
               <div class="col">7</div>
             </div>
             <div class="row level">
-              <div class="col">INR 1000</div>
+              <div class="col" id="prize-6">INR 300</div>
               <div class="col">6</div>
             </div>
             <div class="row level">
-              <div class="col">INR 1000</div>
+              <div class="col" id="prize-5">INR 200</div>
               <div class="col">5</div>
             </div>
             <div class="row level">
-              <div class="col">INR 1000</div>
+              <div class="col" id="prize-4">INR 100</div>
               <div class="col">4</div>
             </div>
             <div class="row level">
-              <div class="col">INR 1000</div>
+              <div class="col" id="prize-3">INR 50</div>
               <div class="col">3</div>
             </div>
             <div class="row level">
-              <div class="col">INR 1000</div>
+              <div class="col" id="prize-2">INR 20</div>
               <div class="col">2</div>
             </div>
             <div class="row level">
-              <div class="col">INR 1000</div>
+              <div class="col" id="prize-1">INR 10</div>
               <div class="col">1</div>
             </div>
           </div>
